# nseg

./: .gitignore  LICENSE  README.md  __init__.py  check_data_shapes.py  download_data.py  download_data.sh  environment.yml  eval_utils.py  gp_predict.py  gp_train.py  params.py  pyproject.toml  requirements.txt  segment_mtlsd.py  shared.py  train_mtlsd.py  zna.py
conf/: config.yaml
data/: structure.md  synth_experiments_data.md  zf_11_micron_roi.json  zf_18_micron_roi.json  zf_32_micron_roi.json  zf_61_micron_roi.json  zf_benchmark_roi.json
nseg/: eval_utils.py  funlib_unet.py  gp_boundaries.py  gp_predict.py  gp_train.py  mednext.py  prepare_cremi3d.py  prepare_data.py  segment_mtlsd.py  shared.py  train_mtlsd.py  utils.py  zna.py
nseg/conf/: __init__.py  config.yaml  inference_config.yaml
nseg/evaluation/: eval_run_groups.yaml  score_db_access.py
nseg/gpx/: gp_distmaps.py  gp_scan.py  gp_sources.py  gp_tensor.py  gp_train.py
nseg/inference/: 01_predict_blockwise.py  02_extract_fragments_blockwise.py  03_agglomerate_blockwise.py  04_find_segments.py  05_evaluate_annotations.py  05_evaluate_volumes.py  05_extract_segmentation_from_lut.py  eval_456.py  full_eval.py  i1_predict.py  i2_extract_fragments.py  i3_agglomerate.py  i4_find_segments.py  i5_evaluate_annotations.py  i5_extract_segmentation_from_lut.py  i6_evaluate_annotations.py  i6_extract_segmentation.py  iutils.py  iz_evaluate_volumes.py  predict_scan.py
nseg/sandbox/: compare_slices.py  db_eval_scores.py  densify_labels.py  get_raw_11m.py  get_raw_roi.py  link_synth.sh  meshes.py  napv.py  napv_densifying.py  napv_seg.py  pkl_to_zarr.py  plot_eval_scores_from_csv.ipynb  plotlywandb.py  plotting.py  torchcompile.py  videowandb.py  visualize_zarr_slices.py  zarrify_synth_gt.py
nseg/scripts/: collect_halfsynth_data.py  (+16 more)
viewer/: requirements.txt
(+83 files in other folders)
