[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "nseg"
# TODO: Put all deps here
dependencies = [
  "numpy",
  "git+https://github.com/mdraw/gunpowder.git@patch-update-dtypes#egg=gunpowder",
]
requires-python = ">=3.10"
description = "nseg"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dynamic = ["version"]

[project.scripts]
train = "nseg.train_mtlsd:main"

[tool.setuptools]
packages = ["nseg"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
write_to = "nseg/_version.py"


[tool.ruff]
line-length = 120