[build-system]
requires = ["setuptools>=67.6", "wheel", "setuptools-scm[toml]>=7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "nseg"
requires-python = ">=3.10"
description = "Neuron Instance Segmentation"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dynamic = ["version", "dependencies"]

[project.scripts]
nseg-train = "nseg.train_mtlsd:main"
nseg-segment = "nseg.segment_mtlsd:main"

[tool.setuptools]
packages = ["nseg"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
write_to = "nseg/_version.py"

[tool.ruff]
line-length = 120
